# VideoDeWatermark

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs  progress.rs
src/components/: DoneView.tsx  DropZone.tsx  Editor.tsx  ProcessingView.tsx  SelectionCanvas.tsx  SetupView.tsx
